# chartgen

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  release.yml
docs/: DESIGN-trading-system.md
examples/: gen_docs.rs  gen_mcp_types.rs
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: gen-mcp-types.sh  gen_screenshots.sh
scripts/gen-mcp-types/: generate.mjs  package-lock.json  package.json
src/: data.rs  engine.rs  feed.rs  fetch.rs  indicator.rs  indicator_state.rs  lib.rs  main.rs  mcp.rs  mcp_schema.rs  mtf.rs  renderer.rs  server.rs
src/indicators/: cipher_b.rs  custom.rs  external.rs  macd.rs  mod.rs  rsi.rs  rsi_combo.rs  ta_bridge.rs  wavetrend.rs
src/trading/: alert.rs  exchange.rs  mod.rs  order.rs  persistence.rs  position.rs  signals.rs  subscription.rs
tests/: e2e.rs
tests/golden/: generate_chart_summary_rsi_30.json
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  chart.ts  main.ts  main.tsx  mcp.ts  oauth.ts  queries.ts  style.css  types.ts
web/src/components/: Chart.tsx  IndicatorChips.tsx  IndicatorPicker.tsx  PaneHeader.tsx  StatusLine.tsx  SymbolForm.tsx
web/src/services/: notifications.ts
web/src/stores/: indicators.ts
web/src/styles/: globals.css
web/src/types/: generated-input.ts  index.ts  responses.ts
web/tests/e2e/: indicator-picker.spec.ts  smoke.spec.ts
web/tests/e2e/fixtures/: app.ts
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
(+24 files in other folders)
