[package]
name = "chartgen"
version = "0.1.0"
edition = "2021"

[dependencies]
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series", "bitmap_encoder", "ttf"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
