[package]
name = "chartgen"
version = "0.1.0"
edition = "2021"

[lib]
name = "chartgen"
path = "src/lib.rs"

[[bin]]
name = "chartgen"
path = "src/main.rs"

[dependencies]
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series", "bitmap_encoder", "ttf"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
ta = "0.5"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
sha2 = "0.10"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
hmac = "0.12"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
